refactored the states service

--- a/Alicargo/Views/Application/Index.cshtml
+++ b/Alicargo/Views/Application/Index.cshtml
@@ -148,7 +148,7 @@
 							type: "json",
 							transport: {
 								read: {
-									cache: true,
+									cache: false,
 									dataType: "json",
 									url: "@Url.Action(MVC.Application.States())/" + applicationId,
 									type: "POST"
