--- a/Alicargo/Views/Reference/CargoIsCustomsClearedButton.cshtml
+++ b/Alicargo/Views/Reference/CargoIsCustomsClearedButton.cshtml
@@ -12,6 +12,7 @@
 				$.post('@Url.Action(MVC.Reference.CargoIsCustomsCleared(Model.Id))')
 					.done(function () {
 						alert("@Pages.SuccessOperation.JavaScriptStringEncode()");
+						// todo: for a broker do rediret to the awb grid page
 					})
 					.error(function () {
 						alert("@Pages.AnError.JavaScriptStringEncode()");
