--- a/Alicargo/Views/ApplicationList/Index.cshtml
+++ b/Alicargo/Views/ApplicationList/Index.cshtml
@@ -50,7 +50,7 @@
 				transport: {
 					read: {
 						dataType: "json",
-						url: '@Url.Action(MVC.Application.List())',
+						url: '@Url.Action(MVC.ApplicationList.List())',
 						type: "POST"
 					}
 				},
