renamed Gross to Weigth in contracts

--- a/Alicargo/Views/ApplicationList/AdminDetails.cshtml
+++ b/Alicargo/Views/ApplicationList/AdminDetails.cshtml
@@ -36,10 +36,10 @@
 	#= Volume #
 </p>
 # } #
-# if(Gross != null){ #
+# if(Weigth != null){ #
 <p>
-	<span>@Entities.Gross:</span>
-	#= Gross #
+	<span>@Entities.Weigth:</span>
+	#= Weigth #
 </p>
 # } #
 # if(Characteristic != null){ #
