--- a/Alicargo/Views/ApplicationList/ClientColumns.cshtml
+++ b/Alicargo/Views/ApplicationList/ClientColumns.cshtml
@@ -9,7 +9,7 @@ var columns = [
 { field: "FactoryName", title: '@Entities.FactoryName', groupable: false },
 { field: "MarkName", title: '@Entities.Mark', groupable: false },
 { field: "Count", title: '@Entities.Count', groupable: false, width: "35px" },
-{ field: "Gross", title: '@Entities.Gross', groupable: false, width: "35px" },
+{ field: "Weigth", title: '@Entities.Weigth', groupable: false, width: "35px" },
 { field: "Invoice", title: '@Entities.Invoice', groupable: false },
 { field: "Value", title: '@Entities.Value', groupable: false, template: function(dataItem){return dataItem.Value + CurrencyType[dataItem.CurrencyId];} },
 { field: "Transit.MethodOfTransitString", title: '@Entities.MethodOfTransit', groupable: false },
