--- a/Alicargo/Views/ApplicationList/ForwarderColumns.cshtml
+++ b/Alicargo/Views/ApplicationList/ForwarderColumns.cshtml
@@ -6,7 +6,7 @@ var columns = [
 { field: "LegalEntity", title: '@Entities.LegalEntity', groupable: true, width: "150px" },
 { field: "DisplayNumber", title: '@Entities.DisplayNumber', width: "70px", groupable: false },
 { field: "Count", title: '@Entities.Count', groupable: false, width: "35px", groupFooterTemplate: "#= Count.sum #" },
-{ field: "Gross", title: '@Entities.Gross', groupable: false, width: "35px", groupFooterTemplate: "#= Gross.sum #" },
+{ field: "Weigth", title: '@Entities.Weigth', groupable: false, width: "35px", groupFooterTemplate: "#= Weigth.sum #" },
 { field: "Transit.CarrierName", title: '@Entities.CarrierName', groupable: false, width: "100px" },
 { field: "Transit.MethodOfTransitString", title: '@Entities.MethodOfTransit', groupable: false, width: "75px" },
 { field: "Transit.City", title: '@Entities.City', groupable: false, width: "100px" },
