--- a/Alicargo/Views/Application/DisplayTemplates/ApplicationModel.cshtml
+++ b/Alicargo/Views/Application/DisplayTemplates/ApplicationModel.cshtml
@@ -29,7 +29,7 @@
 </div>
 <div class="row">
 	<div class="span4">
-		@Html.DisplayWithLabelFor(model => model.Gross)
+		@Html.DisplayWithLabelFor(model => model.Weigth)
 	</div>
 	<div class="span4">
 		@Html.DisplayWithLabelFor(model => model.AddressLoad)
