--- a/Alicargo/Views/ApplicationList/AdminColumns.cshtml
+++ b/Alicargo/Views/ApplicationList/AdminColumns.cshtml
@@ -12,7 +12,7 @@ var columns = [
 { field: "FactoryName", title: '@Entities.FactoryName', groupable: false, width: "100px" },
 { field: "MarkName", title: '@Entities.Mark', groupable: false, width: "100px" },
 { field: "Count", title: '@Entities.Count', groupable: false, width: "35px", groupFooterTemplate: "#= Count.sum #" },
-{ field: "Gross", title: '@Entities.Gross', groupable: false, width: "35px", groupFooterTemplate: "#= Gross.sum #" },
+{ field: "Weigth", title: '@Entities.Weigth', groupable: false, width: "35px", groupFooterTemplate: "#= Weigth.sum #" },
 { field: "Invoice", title: '@Entities.Invoice', groupable: false, width: "150px" },
 { field: "Value", title: '@Entities.Value', groupable: false, width: "70px" },
 { field: "Transit.MethodOfTransitString", title: '@Entities.MethodOfTransit', groupable: false, width: "75px" },
