--- a/Alicargo/Views/Sender/EditorTemplates/ApplicationSenderEdit.cshtml
+++ b/Alicargo/Views/Sender/EditorTemplates/ApplicationSenderEdit.cshtml
@@ -48,7 +48,7 @@
 		@Html.EditorWithLabelFor(model => model.Invoice)
 	</div>
 	<div class="span4">
-		@Html.EditorWithLabelFor(model => model.Gross)
+		@Html.EditorWithLabelFor(model => model.Weigth)
 		@Html.EditorWithLabelFor(model => model.Count)
 	</div>
 	<div class="span4">
