--- a/Alicargo/Views/Shared/EditorTemplates/ApplicationModel.cshtml
+++ b/Alicargo/Views/Shared/EditorTemplates/ApplicationModel.cshtml
@@ -93,7 +93,7 @@
 </div>
 <div class="row">
 	<div class="span4">
-		@Html.EditorWithLabelFor(model => model.Gross)
+		@Html.EditorWithLabelFor(model => model.Weigth)
 	</div>
 	<div class="span4">
 		@Html.EditorWithLabelFor(model => model.AddressLoad)
