--- a/Alicargo/Views/ApplicationList/AdminColumns.cshtml
+++ b/Alicargo/Views/ApplicationList/AdminColumns.cshtml
@@ -14,7 +14,7 @@ var columns = [
 { field: "Count", title: '@Entities.Count', groupable: false, width: "35px", groupFooterTemplate: "#= Count.sum #" },
 { field: "Weigth", title: '@Entities.Weigth', groupable: false, width: "35px", groupFooterTemplate: "#= Weigth.sum #" },
 { field: "Invoice", title: '@Entities.Invoice', groupable: false, width: "150px" },
-{ field: "Value", title: '@Entities.Value', groupable: false, width: "70px" },
+{ field: "ValueString", title: '@Entities.Value', groupable: false, width: "70px" },
 { field: "Transit.MethodOfTransitString", title: '@Entities.MethodOfTransit', groupable: false, width: "75px" },
 { field: "Transit.City", title: '@Entities.City', groupable: false, width: "100px" },
 { field: "Transit.CarrierName", title: '@Entities.CarrierName', groupable: false, width: "100px" },
