--- a/Alicargo/Views/ApplicationList/SenderColumns.cshtml
+++ b/Alicargo/Views/ApplicationList/SenderColumns.cshtml
@@ -9,9 +9,7 @@ var columns = [
 { field: "Count", title: '@Entities.Count', groupable: false, width: "35px", groupFooterTemplate: "#= Count.sum #" },
 { field: "Weigth", title: '@Entities.Weigth', groupable: false, width: "35px", groupFooterTemplate: "#= Weigth.sum #" },
 { field: "Invoice", title: '@Entities.Invoice', groupable: false },
-{ field: "Value", title: '@Entities.Value', groupable: false, template: function(dataItem){
-	return dataItem.Value + CurrencyType[dataItem.CurrencyId];
-} },
+{ field: "ValueString", title: '@Entities.Value', groupable: false, width: "70px" },
 { field: "State", title: '@Entities.StateName', groupable: true, editor: stateDropDownEditor, template: "#= State.StateName #" },
 { field: "StateChangeTimestampLocalString", title: '@Entities.StateChangeTimestamp', groupable: false },
 { field: "ReferenceBill", title: '@Entities.AirWayBill', groupable: true, width: "150px", groupHeaderTemplate: "@Entities.AWB: #= !!value ? value : '@Pages.NoReference' #" }];
