--- a/Alicargo/Views/ApplicationList/AdminColumns.cshtml
+++ b/Alicargo/Views/ApplicationList/AdminColumns.cshtml
@@ -19,4 +19,4 @@ var columns = [
 { field: "Transit.City", title: '@Entities.City', groupable: false, width: "100px" },
 { field: "Transit.CarrierName", title: '@Entities.CarrierName', groupable: false, width: "100px" },
 { field: "TransitReference", title: '@Entities.TransitReference', groupable: false, width: "150px" },
-{ field: "ReferenceBill", title: '@Entities.AirWayBill', groupable: true, width: "150px", groupHeaderTemplate: "@Entities.AWB: #= !!value ? value : '@Pages.NoReference' #" }];
+{ field: "AirWaybill", title: '@Entities.AirWayBill', groupable: true, width: "150px", groupHeaderTemplate: "@Entities.AWB: #= !!value ? value : '@Pages.NoReference' #" }];
