applying Application list item

--- a/Alicargo/Views/ApplicationList/AdminColumns.cshtml
+++ b/Alicargo/Views/ApplicationList/AdminColumns.cshtml
@@ -2,21 +2,21 @@
 @inherits BaseWebViewPage<ApplicationIndexModel>
 
 var columns = [
-{ field: "CreationTimestampLocalString", title: '@Entities.CreationTimestamp', groupable: false, width: "90px" },
+{ field: "Data.CreationTimestampLocalString", title: '@Entities.CreationTimestamp', groupable: false, width: "90px" },
 { field: "State", title: '@Entities.StateName', groupable: true, width: "150px", editor: stateDropDownEditor, template: "#= State.StateName #" },
-{ field: "DateOfCargoReceiptLocalString", title: '@Entities.DateOfCargoReceipt', groupable: false, editor: dateEditor, width: "90px", template: "#= DateOfCargoReceiptLocalString == null ? '' : kendo.toString(DateOfCargoReceiptLocalString, 'd') #" },
-{ field: "DateInStockLocalString", title: '@Entities.DateInStock', groupable: false, width: "90px" },
-{ field: "ClientNic", title: '@Entities.Nic', groupable: false, width: "100px" },
-{ field: "LegalEntity", title: '@Entities.LegalEntity', groupable: true, width: "150px" },
-{ field: "DisplayNumber", title: '@Entities.DisplayNumber', groupable: false, width: "60px" },
-{ field: "FactoryName", title: '@Entities.FactoryName', groupable: false, width: "100px" },
-{ field: "MarkName", title: '@Entities.Mark', groupable: false, width: "100px" },
-{ field: "Count", title: '@Entities.Count', groupable: false, width: "35px", groupFooterTemplate: "#= Count.sum #" },
-{ field: "Weigth", title: '@Entities.Weigth', groupable: false, width: "35px", groupFooterTemplate: "#= Weigth.sum #" },
-{ field: "Invoice", title: '@Entities.Invoice', groupable: false, width: "150px" },
-{ field: "ValueString", title: '@Entities.Value', groupable: false, width: "70px" },
-{ field: "Transit.MethodOfTransitString", title: '@Entities.MethodOfTransit', groupable: false, width: "75px" },
-{ field: "Transit.City", title: '@Entities.City', groupable: false, width: "100px" },
-{ field: "Transit.CarrierName", title: '@Entities.CarrierName', groupable: false, width: "100px" },
-{ field: "TransitReference", title: '@Entities.TransitReference', groupable: false, width: "150px" },
-{ field: "AirWaybill", title: '@Entities.AirWayBill', groupable: true, width: "150px", groupHeaderTemplate: "@Entities.AWB: #= !!value ? value : '@Pages.NoReference' #" }];
+{ field: "Data.DateOfCargoReceiptLocalString", title: '@Entities.DateOfCargoReceipt', groupable: false, editor: dateEditor, width: "90px", template: "#= DateOfCargoReceiptLocalString == null ? '' : kendo.toString(DateOfCargoReceiptLocalString, 'd') #" },
+{ field: "Data.DateInStockLocalString", title: '@Entities.DateInStock', groupable: false, width: "90px" },
+{ field: "Data.ClientNic", title: '@Entities.Nic', groupable: false, width: "100px" },
+{ field: "Data.ClientLegalEntity", title: '@Entities.LegalEntity', groupable: true, width: "150px" },
+{ field: "Data.DisplayNumber", title: '@Entities.DisplayNumber', groupable: false, width: "60px" },
+{ field: "Data.FactoryName", title: '@Entities.FactoryName', groupable: false, width: "100px" },
+{ field: "Data.MarkName", title: '@Entities.Mark', groupable: false, width: "100px" },
+{ field: "Data.Count", title: '@Entities.Count', groupable: false, width: "35px", groupFooterTemplate: "#= Data.Count.sum #" },
+{ field: "Data.Weigth", title: '@Entities.Weigth', groupable: false, width: "35px", groupFooterTemplate: "#= Data.Weigth.sum #" },
+{ field: "Data.Invoice", title: '@Entities.Invoice', groupable: false, width: "150px" },
+{ field: "Data.ValueString", title: '@Entities.Value', groupable: false, width: "70px" },
+{ field: "Data.TransitMethodOfTransitString", title: '@Entities.MethodOfTransit', groupable: false, width: "75px" },
+{ field: "Data.TransitCity", title: '@Entities.City', groupable: false, width: "100px" },
+{ field: "Data.TransitCarrierName", title: '@Entities.CarrierName', groupable: false, width: "100px" },
+{ field: "Data.TransitReference", title: '@Entities.TransitReference', groupable: false, width: "150px" },
+{ field: "Data.AirWaybill", title: '@Entities.AirWayBill', groupable: true, width: "150px", groupHeaderTemplate: "@Entities.AWB: #= !!value ? value : '@Pages.NoReference' #" }];
