--- a/Alicargo/Views/ApplicationList/AdminColumns.cshtml
+++ b/Alicargo/Views/ApplicationList/AdminColumns.cshtml
@@ -19,4 +19,4 @@ var columns = [
 { field: "Data.TransitCity", title: '@Entities.City', groupable: false, width: "100px" },
 { field: "Data.TransitCarrierName", title: '@Entities.CarrierName', groupable: false, width: "100px" },
 { field: "Data.TransitReference", title: '@Entities.TransitReference', groupable: false, width: "150px" },
-{ field: "Data.AirWaybill", title: '@Entities.AirWayBill', groupable: true, width: "150px", groupHeaderTemplate: "@Entities.AWB: #= !!value ? value : '@Pages.NoReference' #" }];
+{ field: "Data.AirWaybill", title: '@Entities.AirWayBill', groupable: true, width: "150px", groupHeaderTemplate: "@Entities.AWB: #= !!value ? value : '@Pages.NoAirWaybill' #" }];
