--- a/Alicargo/Views/ApplicationList/ForwarderColumns.cshtml
+++ b/Alicargo/Views/ApplicationList/ForwarderColumns.cshtml
@@ -15,4 +15,4 @@ var columns = [
 { field: "Transit.Phone", title: '@Entities.Phone', groupable: false, width: "100px" },
 { field: "Transit.WarehouseWorkingTime", title: '@Entities.WarehouseWorkingTime', groupable: false, width: "90px" },
 { field: "TransitReference", title: '@Entities.TransitReference', groupable: false, width: "150px" },
-{ field: "ReferenceBill", title: '@Entities.AirWayBill', groupable: true, width: "150px", groupHeaderTemplate: "@Entities.AWB: #= !!value ? value : '@Pages.NoReference' #" }];
+{ field: "AirWaybillBill", title: '@Entities.AirWayBill', groupable: true, width: "150px", groupHeaderTemplate: "@Entities.AWB: #= !!value ? value : '@Pages.NoAirWaybill' #" }];
