--- a/Alicargo/Views/Shared/EditorTemplates/AirWaybillModel.cshtml
+++ b/Alicargo/Views/Shared/EditorTemplates/AirWaybillModel.cshtml
@@ -1,7 +1,5 @@
-﻿@using System.Activities.Statements
-@using Alicargo.Core.Enums
-@using Resources
-@inherits BaseWebViewPage<ReferenceModel>
+﻿@using Resources
+@inherits BaseWebViewPage<AirWaybillModel>
 
 @helper SelectBrocker()
 {
