--- a/Alicargo/Views/Shared/EditorTemplates/ApplicationModel.cshtml
+++ b/Alicargo/Views/Shared/EditorTemplates/ApplicationModel.cshtml
@@ -6,7 +6,7 @@
 {
 	@Html.HiddenFor(x => x.ClientId)
 	@Html.HiddenFor(x => x.StateId)
-	@Html.HiddenFor(x => x.ReferenceId)
+	@Html.HiddenFor(x => x.AirWaybillId)
 	@Html.HiddenFor(x => x.TransitId)
 	@Html.HiddenFor(x => x.DateInStock)
 	@Html.HiddenFor(x => x.DateOfCargoReceipt)
