--- a/Alicargo/Views/AirWaybill/CargoIsCustomsClearedButton.cshtml
+++ b/Alicargo/Views/AirWaybill/CargoIsCustomsClearedButton.cshtml
@@ -9,7 +9,7 @@
 		$(function () {
 			$('#@Html.Id("CargoIsCustomsCleared")').click(function () {
 				var that = $(this).attr("disabled", "disabled");
-				$.post('@Url.Action(MVC.Reference.CargoIsCustomsCleared(Model.Id))')
+				$.post('@Url.Action(MVC.AirWaybill.CargoIsCustomsCleared(Model.Id))')
 					.done(function () {
 						alert("@Pages.SuccessOperation.JavaScriptStringEncode()");
 						// todo: for a broker do rediret to the awb grid page
