--- a/Alicargo/Views/ApplicationList/ClientColumns.cshtml
+++ b/Alicargo/Views/ApplicationList/ClientColumns.cshtml
@@ -15,4 +15,4 @@ var columns = [
 { field: "Transit.MethodOfTransitString", title: '@Entities.MethodOfTransit', groupable: false },
 { field: "Transit.CarrierName", title: '@Entities.CarrierName', groupable: false },
 { field: "TransitReference", title: '@Entities.TransitReference', groupable: false, width: "150px" },
-{ field: "ReferenceBill", title: '@Entities.AirWayBill', groupable: true, width: "150px", groupHeaderTemplate: "@Entities.AWB: #= !!value ? value : '@Pages.NoReference' #" }];
+{ field: "AirWaybillBill", title: '@Entities.AirWayBill', groupable: true, width: "150px", groupHeaderTemplate: "@Entities.AWB: #= !!value ? value : '@Pages.NoAirWaybill' #" }];
