--- a/Alicargo/Views/Shared/Memu.cshtml
+++ b/Alicargo/Views/Shared/Memu.cshtml
@@ -24,7 +24,7 @@
 	if (IdentityService.IsInRole(RoleType.Admin))
 	{
 	<li>@Html.ActionLink(@Resources.Pages.Applications, MVC.ApplicationList.Index())</li>
-	<li>@Html.ActionLink(@Resources.Pages.References, MVC.Reference.Index())</li>
+	<li>@Html.ActionLink(@Resources.Pages.AirWaybills, MVC.AirWaybill.Index())</li>
 	<li class="dropdown">
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown">@Resources.Pages.Users<b class="caret"></b></a>
 		<ul class="dropdown-menu">
@@ -43,7 +43,7 @@
 	if (IdentityService.IsInRole(RoleType.Sender))
 	{
 	<li>@Html.ActionLink(@Resources.Pages.Applications, MVC.ApplicationList.Index())</li>
-	<li>@Html.ActionLink(Resources.Entities.AirWayBill, MVC.Reference.Index())</li>
+	<li>@Html.ActionLink(Resources.Entities.AirWayBill, MVC.AirWaybill.Index())</li>
 	}
 }
 
@@ -51,7 +51,7 @@
 {
 	if (IdentityService.IsInRole(RoleType.Brocker))
 	{	
-	<li>@Html.ActionLink(Resources.Entities.AirWayBill, MVC.Reference.Index())</li>
+	<li>@Html.ActionLink(Resources.Entities.AirWayBill, MVC.AirWaybill.Index())</li>
 	}
 }
 
