--- a/Alicargo/Views/ApplicationList/AdminDetails.cshtml
+++ b/Alicargo/Views/ApplicationList/AdminDetails.cshtml
@@ -78,52 +78,52 @@
 	#= MethodOfDeliveryLocalString #				
 </p>
 # } #
-# if(Transit.City != null){ #
+# if(TransitCity != null){ #
 <p>
 	<span>@Entities.City.EncodeForKendo():</span>
-	#: Transit.City #
+	#: TransitCity #
 </p>
 # } #
-# if(Transit.Address != null){ #
+# if(TransitAddress != null){ #
 <p>
 	<span>@Entities.Address:</span>
-	#= Transit.Address #
+	#= TransitAddress #
 </p>
 # } #
-# if(Transit.RecipientName != null){ #
+# if(TransitRecipientName != null){ #
 <p>
 	<span>@Entities.RecipientName:</span>
-	#= Transit.RecipientName #
+	#= TransitRecipientName #
 </p>
 # } #
-# if(Transit.Phone != null){ #
+# if(TransitPhone != null){ #
 <p>
 	<span>@Entities.Phone:</span>
-	#= Transit.Phone #
+	#= TransitPhone #
 </p>
 # } #
-# if(Transit.WarehouseWorkingTime != null){ #
+# if(TransitWarehouseWorkingTime != null){ #
 <p>
 	<span>@Entities.WarehouseWorkingTime (@Pages.Transit):</span>
-	#= Transit.WarehouseWorkingTime #				
+	#= TransitWarehouseWorkingTime #				
 </p>
 # } #	
-# if(Transit.MethodOfTransitString != null){ #
+# if(TransitMethodOfTransitString != null){ #
 <p>
 	<span>@Entities.MethodOfTransit:</span>
-	#= Transit.MethodOfTransitString #
+	#= TransitMethodOfTransitString #
 </p>
 # } #
-# if(Transit.DeliveryTypeString != null){ #
+# if(TransitDeliveryTypeString != null){ #
 <p>
 	<span>@Entities.DeliveryType:</span>
-	#= Transit.DeliveryTypeString #				
+	#= TransitDeliveryTypeString #				
 </p>
 # } #			
-# if(Transit.CarrierName != null){ #
+# if(TransitCarrierName != null){ #
 <p>
 	<span>@Entities.CarrierName:</span>
-	#= Transit.CarrierName #				
+	#= TransitCarrierName #				
 </p>
 # } #
 # if(FactoryName != null){ #
