--- a/Alicargo/Views/ApplicationList/ForwarderColumns.cshtml
+++ b/Alicargo/Views/ApplicationList/ForwarderColumns.cshtml
@@ -7,12 +7,12 @@ var columns = [
 { field: "DisplayNumber", title: '@Entities.DisplayNumber', width: "70px", groupable: false },
 { field: "Count", title: '@Entities.Count', groupable: false, width: "35px", groupFooterTemplate: "#= Count.sum #" },
 { field: "Weigth", title: '@Entities.Weigth', groupable: false, width: "35px", groupFooterTemplate: "#= Weigth.sum #" },
-{ field: "Transit.CarrierName", title: '@Entities.CarrierName', groupable: false, width: "100px" },
-{ field: "Transit.MethodOfTransitString", title: '@Entities.MethodOfTransit', groupable: false, width: "75px" },
-{ field: "Transit.City", title: '@Entities.City', groupable: false, width: "100px" },
-{ field: "Transit.RecipientName", title: '@Entities.RecipientName', groupable: false, width: "100px" },
-{ field: "Transit.Address", title: '@Entities.Address', groupable: false, width: "100px" },
-{ field: "Transit.Phone", title: '@Entities.Phone', groupable: false, width: "100px" },
-{ field: "Transit.WarehouseWorkingTime", title: '@Entities.WarehouseWorkingTime', groupable: false, width: "90px" },
+{ field: "TransitCarrierName", title: '@Entities.CarrierName', groupable: false, width: "100px" },
+{ field: "TransitMethodOfTransitString", title: '@Entities.MethodOfTransit', groupable: false, width: "75px" },
+{ field: "TransitCity", title: '@Entities.City', groupable: false, width: "100px" },
+{ field: "TransitRecipientName", title: '@Entities.RecipientName', groupable: false, width: "100px" },
+{ field: "TransitAddress", title: '@Entities.Address', groupable: false, width: "100px" },
+{ field: "TransitPhone", title: '@Entities.Phone', groupable: false, width: "100px" },
+{ field: "TransitWarehouseWorkingTime", title: '@Entities.WarehouseWorkingTime', groupable: false, width: "90px" },
 { field: "TransitReference", title: '@Entities.TransitReference', groupable: false, width: "150px" },
 { field: "AirWaybillBill", title: '@Entities.AirWayBill', groupable: true, width: "150px", groupHeaderTemplate: "@Entities.AWB: #= !!value ? value : '@Pages.NoAirWaybill' #" }];
