--- a/Alicargo/Views/ApplicationList/ClientColumns.cshtml
+++ b/Alicargo/Views/ApplicationList/ClientColumns.cshtml
@@ -12,7 +12,7 @@ var columns = [
 { field: "Weigth", title: '@Entities.Weigth', groupable: false, width: "35px" },
 { field: "Invoice", title: '@Entities.Invoice', groupable: false },
 { field: "ValueString", title: '@Entities.Value', groupable: false, width: "70px" },
-{ field: "Transit.MethodOfTransitString", title: '@Entities.MethodOfTransit', groupable: false },
-{ field: "Transit.CarrierName", title: '@Entities.CarrierName', groupable: false },
+{ field: "TransitMethodOfTransitString", title: '@Entities.MethodOfTransit', groupable: false },
+{ field: "TransitCarrierName", title: '@Entities.CarrierName', groupable: false },
 { field: "TransitReference", title: '@Entities.TransitReference', groupable: false, width: "150px" },
 { field: "AirWaybillBill", title: '@Entities.AirWayBill', groupable: true, width: "150px", groupHeaderTemplate: "@Entities.AWB: #= !!value ? value : '@Pages.NoAirWaybill' #" }];
