--- a/Alicargo/Views/ApplicationList/Index.cshtml
+++ b/Alicargo/Views/ApplicationList/Index.cshtml
@@ -83,26 +83,26 @@
 				$(".close-application", e.detailRow).click(function () {
 					if (window.confirm("@Pages.StateSetConfirm.JavaScriptStringEncode()")) {
 						var url = "@Url.Action(MVC.ApplicationUpdate.Close())";
-						$.post(url, { id: data.Data.Id }).done(updateGrid).fail(error);
+						$.post(url, { id: data.Id }).done(updateGrid).fail(error);
 					}
 				});
 
 				$(".delete-application", e.detailRow).click(function () {
 					if (window.confirm("@Pages.DeleteConfirm.JavaScriptStringEncode()")) {
 						var url = "@Url.Action(MVC.Application.Delete())";
-						$.post(url, { id: data.Data.Id }).done(updateGrid).fail(error);
+						$.post(url, { id: data.Id }).done(updateGrid).fail(error);
 					}
 				});
 
 				$(".AirWaybill-select", e.detailRow)
-					.val(data.Data.AirWaybillId)
+					.val(data.AirWaybillId)
 					.change(function () {
 						if (window.confirm("@Pages.AirWaybillSetConfirm")) {
 							var url = "@Url.Action(MVC.AirWaybill.SetAirWaybill())";
 							$.post(url, { AirWaybillId: $(this).val(), applicationId: data.Id }).done(updateGrid).fail(error);
 						}
 					});
-				
+
 				var cargoIsFlew = @StateConfig.CargoIsFlewStateId;
 				if (data.AirWaybillId && data.StateId != cargoIsFlew) {
 					$(".AirWaybill-holder", e.detailRow).hide();
