--- a/Alicargo/Views/Application/DisplayTemplates/ApplicationEditModel.cshtml
+++ b/Alicargo/Views/Application/DisplayTemplates/ApplicationEditModel.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.Ajax.Utilities
 @using Resources
-@model ApplicationModel
+@model ApplicationEditModel
 
 <div class="row">
 	<div class="span4">
