--- a/Alicargo/Views/Application/Edit.cshtml
+++ b/Alicargo/Views/Application/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Resources
 @using Alicargo.Helpers
-@model ApplicationModel
+@model ApplicationEditModel
 
 <h4 style="margin-top: 33px;" class="pull-right">@Entities.Nic: @Html.DisplayFor(x => x.ClientNic)</h4>
 @Html.EditPage(Pages.ApplicationEdit, Url.Action(MVC.Application.Edit()), Pages.Update)
