--- a/Alicargo/Views/Application/EditorTemplates/ApplicationEditModel.cshtml
+++ b/Alicargo/Views/Application/EditorTemplates/ApplicationEditModel.cshtml
@@ -1,6 +1,6 @@
 ﻿@using System.Globalization
 @using Alicargo.Core.Localization
-@inherits BaseWebViewPage<ApplicationModel>
+@inherits BaseWebViewPage<ApplicationEditModel>
 
 @if (Model.Id != 0)
 {
