--- a/Alicargo/Views/Application/Details.cshtml
+++ b/Alicargo/Views/Application/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Resources
-@model ApplicationModel
+@model ApplicationEditModel
 
 <h4>@Entities.LegalEntity: @Html.DisplayFor(x => x.LegalEntity)</h4>
 
